// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner/> should renders correctly 1`] = `
<div>
  <div
    class="sc-bdnylx emsujT"
  >
    <svg
      class="sc-gtssRu ioCEly"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-dlnjPT eWfaww"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;

exports[`<Spinner/> should renders large size correctly 1`] = `
<div>
  <div
    class="sc-bdnylx dWsGCO"
  >
    <svg
      class="sc-gtssRu ioCEly"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-dlnjPT eWfaww"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="sc-bdnylx emsujT"
  >
    <svg
      class="sc-gtssRu ioCEly"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-dlnjPT eWfaww"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="sc-bdnylx bzQpaq"
  >
    <svg
      class="sc-gtssRu ioCEly"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-dlnjPT eWfaww"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;
